--- a/default.ini
+++ b/default.ini
@@ -3,4 +3,9 @@ problem_size=8
 mutation_chance=0.1
 cross_chance=0.7
 removeTheStrong=1
-nGenerations=500;
+
+nGenerations=500
+
+report_period=10
+datafile=results/default.csv
+chart=results/default.png
