--- a/default.ini
+++ b/default.ini
@@ -2,11 +2,13 @@ N=200
 problem_size=8
 mutation_chance=0.1
 cross_chance=0.7
-removeTheStrong=1
+removeTheStrong=0
+selection_method=1
 
-nGenerations=500
+nGenerations=1000	
 
 report_period=10
 datafile=results/default.csv
-chartfile=results/default.png
+solutions=results/default.sol
+plotfile_base=results/default
 plotscript_logfile=results/default.log2
